<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/oldPassWord"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_edit_height"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dialog_btn_magrin_left"
        android:layout_marginRight="@dimen/dialog_btn_magrin_right"
        android:layout_marginTop="@dimen/dialog_btn_magrin_top"
        android:background="@drawable/shape_dialog_edit_bg"
        android:hint="@string/account_modify_password_old_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dialog_edit_padding_left"
        android:paddingRight="@dimen/dialog_edit_padding_right"
        android:singleLine="true"
        android:textColor="@color/dialog_text"
        android:textSize="@dimen/dialog_edit_text" />

    <EditText
        android:id="@+id/newPassWord"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_edit_height"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dialog_btn_magrin_left"
        android:layout_marginRight="@dimen/dialog_btn_magrin_right"
        android:layout_marginTop="@dimen/dialog_btn_magrin_top"
        android:background="@drawable/shape_dialog_edit_bg"
        android:hint="@string/account_modify_password_new_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dialog_edit_padding_left"
        android:paddingRight="@dimen/dialog_edit_padding_right"
        android:singleLine="true"
        android:textColor="@color/dialog_text"
        android:textSize="@dimen/dialog_edit_text" />

    <EditText
        android:id="@+id/rePassWord"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_edit_height"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dialog_btn_magrin_top"
        android:layout_marginLeft="@dimen/dialog_btn_magrin_left"
        android:layout_marginRight="@dimen/dialog_btn_magrin_right"
        android:layout_marginTop="@dimen/dialog_btn_magrin_top"
        android:background="@drawable/shape_dialog_edit_bg"
        android:hint="@string/account_modify_password_re_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dialog_edit_padding_left"
        android:paddingRight="@dimen/dialog_edit_padding_right"
        android:singleLine="true"
        android:textColor="@color/dialog_text"
        android:textSize="@dimen/dialog_edit_text" />

</LinearLayout>