<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/setting_exit_horizontal_padding"
    android:paddingRight="@dimen/setting_exit_horizontal_padding" >

    <LinearLayout
        android:id="@+id/setting_exit_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_func_bg"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/setting_exit_note_vertical_padding"
        android:paddingTop="@dimen/setting_exit_note_vertical_padding" >

        <ImageView
            android:layout_width="@dimen/setting_exit_icon_size"
            android:layout_height="@dimen/setting_exit_icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/setting_exit_icon_margin"
            android:layout_marginRight="@dimen/setting_exit_icon_margin"
            android:contentDescription="@null"
            android:duplicateParentState="true"
            android:src="@drawable/close" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:orientation="vertical"
            android:paddingRight="@dimen/setting_exit_text_padding_right" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:text="@string/setting_exit_close"
                android:textColor="@color/setting_exit_text"
                android:textSize="@dimen/setting_exit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_exit_note_vertical_margin"
                android:duplicateParentState="true"
                android:text="@string/setting_exit_close_note"
                android:textColor="@color/setting_exit_note_text"
                android:textSize="@dimen/setting_exit_note_text" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/me_separator" />

    <LinearLayout
        android:id="@+id/setting_exit_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_func_bg"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/setting_exit_note_vertical_padding"
        android:paddingTop="@dimen/setting_exit_note_vertical_padding" >

        <ImageView
            android:layout_width="@dimen/setting_exit_icon_size"
            android:layout_height="@dimen/setting_exit_icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/setting_exit_icon_margin"
            android:layout_marginRight="@dimen/setting_exit_icon_margin"
            android:contentDescription="@null"
            android:duplicateParentState="true"
            android:src="@drawable/signout" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:orientation="vertical"
            android:paddingRight="@dimen/setting_exit_text_padding_right" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:text="@string/setting_exit_signout"
                android:textColor="@color/setting_exit_text"
                android:textSize="@dimen/setting_exit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_exit_note_vertical_margin"
                android:duplicateParentState="true"
                android:text="@string/setting_exit_signout_note"
                android:textColor="@color/setting_exit_note_text"
                android:textSize="@dimen/setting_exit_note_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>