<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/contact_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/contact_organization"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_height"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="@dimen/list_height"
                android:layout_height="@dimen/list_height"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:padding="@dimen/list_avatar_padding"
                android:src="@drawable/contact_organization" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="@dimen/contaxt_item_text_margin"
                android:layout_weight="1"
                android:text="@string/contact_organization"
                android:textSize="@dimen/contaxt_item_text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:background="@color/list_divider" />

        <LinearLayout
            android:id="@+id/contact_groupchat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_height"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="@dimen/list_height"
                android:layout_height="@dimen/list_height"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:padding="@dimen/list_avatar_padding"
                android:src="@drawable/contact_groupchat" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="@dimen/contaxt_item_text_margin"
                android:layout_weight="1"
                android:text="@string/contact_groupchat"
                android:textSize="@dimen/contaxt_item_text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:background="@color/list_divider" />

        <LinearLayout
            android:id="@+id/contact_friendlist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_height"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="@dimen/list_height"
                android:layout_height="@dimen/list_height"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:padding="@dimen/list_avatar_padding"
                android:src="@drawable/contact_friendlist" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="@dimen/contaxt_item_text_margin"
                android:layout_weight="1"
                android:text="@string/contact_friendlist"
                android:textSize="@dimen/contaxt_item_text" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/recent_roster_label"
        android:layout_width="match_parent"
        android:layout_height="@dimen/create_multi_chat_module_height"
        android:background="@color/global_backgroud"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/create_multi_chat_left"
        android:text="@string/recent_contact_friend"
        android:textColor="@color/group_list_name"
        android:textSize="@dimen/create_multi_chat_module_text" />

    <ListView
        android:id="@+id/contact_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/list_divider"
        android:dividerHeight="@dimen/list_divider"
        android:listSelector="@android:color/transparent" >
    </ListView>

</LinearLayout>